src/test/resources/syntax_errors/return_arithmetic_with_operand_in_block.notc
void main() {
    return { 4; } - 5;
}
